deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sigterm
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sigterm
  template:
    metadata:
      labels:
        app: sigterm
        version: v1
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: sigterm
        image: rjshrjndrn/go-sigterm:v1
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
