demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo1
  template:
    metadata:
      labels:
        app: demo1
    spec:
      containers:
      - name: name
        image: rancher/hello-world
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo1
  namespace: default
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: demo1
