ranchcer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher
  namespace: cattle-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rancher
  template:
    metadata:
      labels:
        app: rancher
    spec:
      serviceAccountName: rancher
      containers:
      - name: name
        image: rancher/rancher:v2.3.1
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: rancher
  namespace: cattle-system
spec:
  type: LoadBalancer
  ports:
  - port: 8443
    targetPort: 443
  selector:
    app: rancher
